--- a/src/components/master.css
+++ b/src/components/master.css
@@ -357,6 +357,13 @@
   color: var(--main-color);
   font-size: 1.2rem;
 }
+@media (max-width:786px) {
+  .Why-parent .box{
+    padding: 10px;
+    gap: 10px;
+    max-width: 245px !important;
+  }   
+}
 /* Contact */
 .contact {
   background: #fff;
